# wut

./: .gitignore  Cargo.toml  Makefile.toml  README.md  build.rs  powerpc-none-eabi.json  powerpc-unknown-eabi.json  release.toml  wrapper.h
.github/workflows/: docs.yml
core/: Cargo.toml
core/src/: lib.rs
core/src/collections/: mod.rs
core/src/dynload/: allocators.rs  mod.rs
core/src/foreground/: browser.rs  mod.rs
core/src/fs/: mod.rs  walkdir.rs
core/src/gamepad/: mod.rs
core/src/gx2/: context.rs  dialog_utils.rs  mod.rs  screen.rs
core/src/gx2/error_view/: mod.rs
core/src/gx2/keyboard/: mod.rs
core/src/gx2/shader/: attribute.rs  buffer.rs  mod.rs
core/src/logger/: mod.rs
core/src/net/: errno.rs  socket.rs  tcp.rs
core/src/path/: mod.rs
core/src/process/: mod.rs
core/src/ptr/: mod.rs
core/src/rrc/: mod.rs
core/src/screen/: mod.rs
core/src/sync/: event.rs  lazy_lock.rs  mod.rs  mpmc.rs  mutex.rs  rwlock.rs  semaphore.rs
core/src/thread/: builder.rs  mod.rs  thread.rs  ticks.rs
core/src/time/: datetime.rs  mod.rs
core/src/title/: mod.rs
macros/: Cargo.toml  README.md
macros/src/: lib.rs
math/: Cargo.toml  build.rs
math/src/: bindings.rs  lib.rs  wrapper.h
src/: bindings.rs  env.rs  lib.rs  macros.rs  process.rs  utils.rs  wrapper.h
src/collections/: mod.rs
src/dynamic_loading/: allocators.rs  mod.rs
src/dynload/: allocators.rs  mod.rs
src/font/: mod.rs
src/foreground/: browser.rs  mod.rs
src/fs/: mod.rs
src/gamepad/: drc.rs  generic.rs  mod.rs
src/gx2/: color.rs  context.rs  dialog_utils.rs  mod.rs  screen.rs
src/gx2/error_view/: mod.rs
src/gx2/keyboard/: mod.rs
src/gx2/shader/: attribute.rs  buffer.rs  mod.rs  program.rs
src/io/: mod.rs
src/logger/: mod.rs
src/net/: errno.rs  mod.rs  socket.rs  socket_addrs.rs  tcp.rs
src/path/: mod.rs
src/process/: mod.rs
src/ptr/: mod.rs
src/rrc/: mod.rs
src/screen/: color.rs  mod.rs  position.rs
src/sync/: event.rs  lazy_lock.rs  mod.rs  mpmc.rs  mpsc.rs  mutex.rs  once_lock.rs  rrc.rs  rwlock.rs  semaphore.rs
src/thread/: builder.rs  mod.rs  thread.rs  ticks.rs
src/time/: datetime.rs  mod.rs
src/title/: mod.rs
sys/: Cargo.toml  build.rs
sys/src/: bindings.rs  lib.rs
