[package]
name = "wut"
description = "Wii U Toolchain for Rust"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"
repository = "https://github.com/rust-wiiu/wut"


[features]
default = ["panic_handler"]
panic_handler = ["sys/panic_handler"]
collections = ["dep:hashbrown"]

[lib]
name = "wut"
crate-type = ["lib"]


[dependencies]
sys = { path = "./sys", version = "*" }
wut-macros = { path = "./macros" }
math = { path = "./math", version = "*" }
flagset = { version = "0.4.6", default-features = false }
thiserror = { version = "2.0.3", default-features = false }
hashbrown = { version = "0.15.2", optional = true }
