[package]
name = "wut"
description = "Wii U Toolchain for Rust"
version = "0.3.1"
edition = "2024"
license-file = "LICENSE"
repository = "https://github.com/rust-wiiu/wut"
publish = false


[features]
default = ["panic_handler"]
panic_handler = ["wut-sys/panic_handler"]
collections = ["wut-core/collections"]

[lib]
name = "wut"
crate-type = ["lib"]

[profile]
dev.panic = "abort"
release.panic = "abort"

[dependencies]
wut-sys = { path = "./sys", version = "0.1.0" }
wut-macros = { path = "./macros", version = "0.1.0" }
wut-math = { path = "./math", version = "0.1.0" }
wut-core = { path = "./core", version = "0.1.0" }
